unpackaged/main/default/objects/Success_Message_Setting__mdt/Success_Message_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is used to configure success message based on specific brand for Brand Forms.
Please provide the custom success message and put &lt;ticketid&gt; where ever you need to keep Ticket Number</description>
    <label>Success Message Setting</label>
    <pluralLabel>Success Message Settings</pluralLabel>
</CustomObject>