unpackaged/main/default/objects/Success_Message_Setting__mdt/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <description>This field is used to store Name of Brand</description>
    <label>Brand Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>