unpackaged/main/default/objects/Success_Message_Setting__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This field is used to story Case Source Country</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>