unpackaged/main/default/objects/Success_Message_Setting__mdt/fields/Regards__c.field-meta.xml
<CustomField>
    <fullName>Regards__c</fullName>
    <label>Regards</label>
    <length>255</length>
    <type>Text</type>
</CustomField>