unpackaged/main/default/objects/Success_Message_Setting__mdt/fields/Success_Message_f__c.field-meta.xml
<CustomField>
    <fullName>Success_Message_f__c</fullName>
    <label>Success Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>