unpackaged/main/default/objects/Success_Message_Setting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field is used to store type of form</description>
    <inlineHelpText>Represents either Privacy or Brand Form</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>