unpackaged/main/default/objects/Success_Message_Setting__mdt/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <label>Type of Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>