unpackaged/main/default/objects/Success_Message_Setting__mdt/listViews/Brand_Form_Success_Message.listView-meta.xml
<ListView>
    <fullName>Brand_Form_Success_Message</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>Brand_Name__c</columns>
    <columns>Country__c</columns>
    <columns>Type__c</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Success_Message_f__c</columns>
    <columns>Regards__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>B</value>
    </filters>
    <label>Brand Form Success Message</label>
</ListView>