unpackaged/main/default/objects/Success_Message_Setting__mdt/listViews/Privacy_Form_Message_Unsubscribe.listView-meta.xml
<ListView>
    <fullName>Privacy_Form_Message_Unsubscribe</fullName>
    <columns>MasterLabel</columns>
    <columns>Success_Message_f__c</columns>
    <columns>Brand_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Regards__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>P</value>
    </filters>
    <filters>
        <field>Type_of_Request__c</field>
        <operation>startsWith</operation>
        <value>Un</value>
    </filters>
    <label>Privacy Form Message - Unsubscribe</label>
</ListView>