unpackaged/main/default/objects/Success_Message_Setting__mdt/listViews/Show_All.listView-meta.xml
<ListView>
    <fullName>Show_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Brand_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Regards__c</columns>
    <filterScope>Everything</filterScope>
    <label>Show All</label>
</ListView>